Stop-gap.

--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,23 @@
 	padding-top: 170px;
 }
 
+
 @media (max-width: 767px) { 
 	.main {
 		padding-top: 0px;
 	}
 	.sidebar {
 		padding-top: 96px;
+	}
+}
+
+@media (max-width: 600px) { 
+	.main {
+		padding-top: 0px;
+	}
+	.sidebar {
+		padding-top: 96px;
+		width: 100%
 	}
 }
 
